--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -9,8 +9,11 @@
                         <div class="table-cell">
                             <ul>
                                 <li><a class="search-open" href="#"><i class="zmdi zmdi-search"></i></a></li>
-                                <li><a href="login.html"><i class="zmdi zmdi-lock"></i></a></li>
+                                {% if user.id is not None %}
                                 <li><a href="my-account.html"><i class="zmdi zmdi-account"></i></a></li>
+                                {% else %}
+                                <li><a href="login.html"><i class="zmdi zmdi-lock"></i></a></li>
+                                {% endif %}
                                 <li><a href="wishlist.html"><i class="zmdi zmdi-favorite"></i></a></li>
                             </ul>
                         </div>
@@ -63,9 +66,6 @@
                                         </div>
                                         {% endfor %}
 
-                                    </div>
-                                    <div class="cart-totals">
-                                        <h5 class="mb-0">Total <span class="floatright"><span style="font-family: 'Arial', 'Helvetica', sans-serif;">&#8377;</span>500.00</span></h5>
                                     </div>
                                     <div class="cart-bottom  clearfix">
                                         <a href="/order/shopcart/" class="button-one floatleft text-uppercase" data-text="View cart">View cart</a>
