--- a/adminpanel/templates/edit_product.html
+++ b/adminpanel/templates/edit_product.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="bs-stepper-content">
-                        <form action="{% url 'adminpanel:editproduct' product.id %}" enctype="multipart/form-data" method="post">
+                    <form action="{% url 'adminpanel:editproduct' product.id %}" enctype="multipart/form-data" method="post">
                          {% csrf_token %}
                         <div id="account-details-vertical" class="content">
                             <div class="content-header">
@@ -301,7 +301,10 @@
                                         <div class="form-check">
                                             <input class="form-check-input" type="checkbox" name="variant" id="variant{{ pro.id }}" value="{{ pro.id }}" checked>
                                             <label class="form-check-label" for="variant{{ pro.id }}">
-                                                <strong style="color:red;">{{ pro.id }}</strong><img src="{{ pro.image.url }}" alt="Product Image" style="width: 50px; height: 50px;">
+                                                <strong style="color:red;">{{ pro.id }}</strong>
+                                                {% if pro.image %}
+                                                <img src="{{ pro.image.url }}" alt="Product Image" style="width: 50px; height: 50px;">
+                                                {% endif %}
                                             </label>
                                         </div>
                                     {% endfor %}
