--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -190,6 +190,11 @@
 								<li><a class="search-open" href="#" title="Search"><i class="zmdi zmdi-search"></i></a></li>
 								{% if user.id is not None %}
 								<li><a href="" title="My-Account"><i class="zmdi zmdi-account"></i></a>
+									{% if userprofile.wallet.wallet %}
+									{{userprofile.wallet.wallet}}
+									{% else %}
+									0.00
+									{% endif %}
 									<div class="customer-login text-left">
 										<h4 class="title-1 title-border text-uppercase mb-30">{{ user.username  }}</h4>
 										<a class="button-one submit-button mt-15" href={% url 'user:logout'%} data-text="login" type="submit">logout</a>
